# nimbus

./: .gitignore  README.md  SPEC.md  pyproject.toml  snapcraft.yaml
.design-sync/: NOTES.md  config.json  conventions.md  preview-theme.jsx
.design-sync/previews/: AppTile.tsx  Badge.tsx  Button.tsx  Modal.tsx  NimbusMark.tsx  Panel.tsx  PasswordField.tsx  PinDots.tsx  PinPad.tsx  SettingsRow.tsx  SettingsSection.tsx  SignalBars.tsx  Spinner.tsx  StatusDot.tsx
.github/workflows/: image-iso.yml  snap.yml  test.yml
backend/: auth.py  config.py  constants.py  main.py  models.py  requirements.txt
backend/agent/: daemon.py
backend/routers/: apps.py  auth.py  files.py  firewall.py  keys.py  model_router.py  models.py  network.py  openclaw.py  snap_store.py  snapshots.py  ssh.py  system.py  tailscale.py  terminal.py
backend/services/: api_keys.py  auth.py  device.py  (+26 more)
docs/: provisioning-backend-api.md  theming.md
examples/: README.md  business-theme.css  daylight-theme.css  family-fun-theme.css  ubuntu-vanilla-theme.css
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
installer/: README.md  build-iso.sh  clear-ubuntu-uefi-entries.sh  install.sh  requirements.txt
model/: build.sh  nimbus-gemma4.json  nimbus-lemonade.json  nimbus-model.json  user.assert  user.json
openclaw-overlay/: setup-wrapper.cjs
scripts/: build-lxc-seed.sh  download_model_cache.py  lemonade-load-35b.sh
setup/: Caddyfile  deploy.sh  lxd-setup.sh  nimbus-lxc-agent.service  nimbus-mdns.service  nimbus.service  setup-mdns.sh  snap-catalog.json
(+70 files in other folders)
